Bug fixes and progress bar added.
Fixed the bug that didn't calculate anti-clockwise wall-kicks accurately.
Fixed the bug where holding Z piece messed up its graphic indicator.
added Level Progression GUI.

--- a/main.css
+++ b/main.css
@@ -7,12 +7,13 @@ td{
     height:20;
 }
 body{
-    background:rgb(120,120,120);
+    background:rgb(30,30,30);
     font-family: 'PressStart2P', cursive;
     font-size: 1.768vw;
     color:white;
     margin:0;
     padding:0;
+    overflow:hidden;
 }
 button{
     font-family: 'PressStart2P'
@@ -30,15 +31,23 @@ canvas{
     width:100%;
     height:100%;
     overflow: hidden;
+    text-align: center;
+    font-size: 14vw;
+}
+#main p{
+    margin:5vw auto 7vw auto;
+    padding:0;
 }
 .buttons{
     width:100%;
-    height:100%;
 }
 .buttons button{
     font-size: 1vw;
     display: block;
     margin: 1vw auto;
     padding: 1vw;
-    width:15%;
+    width:30%;
+    background-color: black;
+    color: white;
+    border: white solid 1px;
 }
